--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body {
 
 @media only screen and (min-width: 930px) {
 
-    .container {
+    .bg {
         height: 600px;
         width: 100%;
         margin: 0;
@@ -85,6 +85,14 @@ body {
         background-position: center;
     }
 
+    .picEvent {
+        border: 2px solid #000000;
+        border-radius: 5px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
     .imgProfileBorder {
         border: 2px solid #f2c94c;
         border-radius: 50%;
@@ -131,8 +139,8 @@ body {
 
     .buttonStyle2 {
         text-transform: uppercase;
-        background-color: #ffffff;
-        border: 2px solid #ffffff;
+        background-color: transparent;
+        border: transparent;
         color: #000000;
         font-size: 18px;
         letter-spacing: 0.2em;
@@ -201,6 +209,21 @@ body {
         background-color: #f2c94c;
     }
 
+    .buttonImg {
+        position: relative;
+        width: 300px;
+        height: 300px;
+        margin-top: 50px;
+        border: 2px solid #000000;
+        border-radius: 5px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-color: #c4c4c4;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .viewAllPos {
         position: relative;
         top: 20px;
@@ -215,7 +238,7 @@ body {
         letter-spacing: 0.1em;
         font-size: 20px;
         font-weight: bold;
-        height: 90%;
+        height: 80%;
         max-width: 500px;
         top: 50px;
         right: 7%;
@@ -437,7 +460,7 @@ body {
         background-position: center;
     }
 
-    .container {
+    .bg {
         height: 235px;
         width: 100%;
         margin: 0;
@@ -569,8 +592,8 @@ body {
 
     .buttonStyle2 {
         text-transform: uppercase;
-        background-color: #ffffff;
-        border: 1px solid #ffffff;
+        background-color:transparent;
+        border: transparent;
         color: #000000;
         font-size: 9px;
         letter-spacing: 0.2em;
@@ -640,6 +663,19 @@ body {
         background-color: #f2c94c;
     }
 
+    .buttonImg {
+        position: relative;
+        width: 100px;
+        height: 100px;
+        margin-top: 50px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-color: #c4c4c4;
+        border: transparent;
+        transition-duration: 0.4s;
+    }
+
     .viewAllPos {
         position: relative;
         top: 5px;
@@ -654,7 +690,7 @@ body {
         letter-spacing: 0.1em;
         font-size: 9px;
         font-weight: bold;
-        height: 90%;
+        height: 80%;
         max-width: 160px;
         top: 50px;
         right: 7%;
