--- a/public/css/item.css
+++ b/public/css/item.css
@@ -2,7 +2,7 @@ body{
     padding: 0;
     margin: 150px;
     text-transform: uppercase;
-    font-family: Roboto;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #item_name{
@@ -17,7 +17,7 @@ h2{
 }
 
 #price{
-    width: 450px;
+    width: 300px;
     height: 70px;
     font-size: 64px;
     text-indent: 10px;
@@ -26,17 +26,18 @@ h2{
 }
 
 #image_product{
-    width: 500px;
-    height: 500px;
-    background: url();
+    position: relative;
+    left: 15%;
     border: 1px solid #000000;
     box-sizing: border-box;
-    border-radius: 10px;
+    border-radius: 10px; 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 #description_item{
     position: relative;
-    left: 800px;
     width: 550px;
     height: 500px;
     background: rgba(196, 196, 196, 0.75);
@@ -63,4 +64,14 @@ input[type="submit"]{
     font-size: 25px;
     border: 2px solid grey;
     box-sizing: border-box;
+}
+
+.gridProduct {
+    display: grid;
+    grid-template-columns: 5fr 5fr;
+}
+
+.center {
+    margin-right: auto;
+    margin-left: auto;
 }
