--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,9 +22,7 @@ body {
         display: block;
         overflow: hidden;
         z-index: -1;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
         background-color: #f2c94c;
         width: 110%;
         top: -10px;
@@ -80,25 +78,19 @@ body {
     .imgBorder {
         border: 2px solid #000000;
         border-radius: 15px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
     }
 
     .picEvent {
         border: 2px solid #000000;
         border-radius: 5px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
     }
 
     .imgProfileBorder {
         border: 2px solid #f2c94c;
         border-radius: 50%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
     }
 
     .imgProfilePos {
@@ -455,9 +447,7 @@ body {
         width: 300px;
         border: 2px solid #000000;
         border-radius: 5px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
     }
 
     .bg {
@@ -475,9 +465,7 @@ body {
         display: block;
         overflow: hidden;
         z-index: -1;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
         background-color: #f2c94c;
         width: 110%;
         top: -10px;
@@ -539,9 +527,7 @@ body {
         height: 150px;
         width: 100px;
         border-radius: 5px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
     }
 
     .imgProfileBorder {
@@ -549,9 +535,7 @@ body {
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
     }
 
     .imgProfilePos {
